# c_inter_and_impl

./: .gitignore  CMakeLists.txt  README.md
inc/: assert.h  except.h  mem.h  stack.h
src/: CMakeLists.txt  assert.c  assert.h  except.c  except.h  mem.c  mem.h  stack.c
test/: CMakeLists.txt  test_assert.c  test_mem.c
